--- a/style.css
+++ b/style.css
@@ -12,15 +12,16 @@ body {
 }
 
 .main-header {
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
 }
 
 input[type="date"] {
     padding: 5px 30px;
 }
 
-.ancher a {
+.ancher p {
     text-decoration: none;
     font-size: 20px;
     color: blue;
@@ -67,7 +68,12 @@ input[type="date"] {
 
 .button-btn {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    position: relative;
+    left: 50%;
+    top: 50px;
 }
 
 #output,
@@ -88,4 +94,10 @@ input[type="date"] {
     text-align: center;
     padding-bottom: 10px;
     margin-bottom: 20px;
+}
+
+#show_error,
+#show_error1 {
+    width: 100%;
+    color: red;
 }
