--- a/style.css
+++ b/style.css
@@ -52,9 +52,7 @@ input[type="date"] {
 }
 
 .btn1,
-.btn,
-#output,
-#poutput {
+.btn {
     background: #7db500;
     color: white;
     padding: 10px 30px;
@@ -79,14 +77,9 @@ input[type="date"] {
 #output,
 #poutput {
     margin-top: 10px;
-    opacity: 0;
     transition: all 0.5s ease-in-out;
     text-align: center;
-}
-
-.opecity-btn {
-    opacity: 1 !important;
-    transition: all 0.5s ease-in-out;
+    padding-left: 40px;
 }
 
 .heading {
@@ -100,4 +93,23 @@ input[type="date"] {
 #show_error1 {
     width: 100%;
     color: red;
+}
+
+#click,
+#btn-btn {
+    display: flex;
+}
+
+.first {
+    cursor: pointer;
+    margin-left: -4px;
+    border-left: none;
+    background: none;
+    outline: non;
+}
+
+.hasDatepicker {
+    border-right: none;
+    outline: none;
+    text-align: center;
 }
