--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ input[type="date"] {
 }
 
 .btn1,
-.btn {
+.btn,
+.reset-btn {
     background: #7db500;
     color: white;
     padding: 10px 30px;
@@ -67,15 +68,26 @@ input[type="date"] {
     cursor: pointer;
     border: none;
     outline: none;
+    width: 270px;
+}
+
+#reset-btn {
+    text-align: center;
+    top: 50px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .button-btn {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     gap: 30px;
-    position: relative;
-    top: 50px;
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
 }
 
 #output,
@@ -83,13 +95,12 @@ input[type="date"] {
     margin-top: 10px;
     transition: all 0.5s ease-in-out;
     text-align: center;
-    opacity: 0;
-    transition: all .5s ease-in-out;
+    display: none;
+    width: 50px;
 }
 
 .opactiy-out {
-    opacity: 1 !important;
-    margin-left: 40px;
+    display: block !important;
     transition: all .5s ease-in-out;
 }
 
@@ -104,11 +115,6 @@ input[type="date"] {
 #show_error1 {
     width: 100%;
     color: red;
-}
-
-#click,
-#btn-btn {
-    display: flex;
 }
 
 .first {
@@ -134,6 +140,9 @@ i.fa-solid.fa-calendar-days {
 
 .first-btn {
     display: flex;
+    width: 360px;
+    gap: 30px;
+    padding-left: 80px;
 }
 
 .date-btn {
